@@ -1,4 +1,7 @@
 == CHANGELOG ==
+24/02/17:
+ - Changed the components list in data_plot to a table, with each type (e.g. impedance, tipper, phase, etc.) as headers.
+ - Added bostick plotting to gplot and data_plot.
 22/02/17:
  - Fixed bug where removing a site in data_plot.py would cause an error if only using a list file. Data.site_names was pointing directly to Raw.site_names rather than getting its own copy, and therefore the site would already be removed when RawData.remove_site was called.
 22/02/17:
